--- a/deployment/dp.yml
+++ b/deployment/dp.yml
@@ -21,7 +21,7 @@ spec:
                       app: nginxapp 
     spec:
       containers:
-            - name: http
+            name: http
              image: tomcat 
           ports:
               - name: http
